# hive

./: .gitignore  ENVIRONMENT_SETUP.md  quickstart.sh
.claude/: settings.local.json
.claude/skills/building-agents-construction/: SKILL.md
.claude/skills/setup-credentials/: SKILL.md
.claude/skills/testing-agent/: SKILL.md
aden-tools/tests/tools/: test_security.py
core/: pyproject.toml  requirements-dev.txt  requirements.txt
core/framework/: __init__.py
core/framework/credentials/: __init__.py  store.py
core/framework/graph/: event_loop_node.py  executor.py  node.py
core/framework/llm/: anthropic.py  base_provider.py  litellm.py  openai.py
core/framework/mcp/: agent_builder_server.py
core/framework/observability/: logging.py
core/framework/runner/: runner.py
core/framework/runtime/: event_bus.py
core/framework/testing/: __init__.py  cli.py  constraint_gen.py  llm_judge.py  prompts.py  success_gen.py
core/framework/tui/: app.py
core/tests/: test_runtime.py  test_testing_framework.py
docs/: getting-started.md
tools/: pyproject.toml
tools/src/aden_tools/credentials/: __init__.py  health_check.py  integrations.py
tools/src/aden_tools/tools/: __init__.py
tools/src/aden_tools/tools/hubspot_tool/: hubspot_tool.py
tools/src/aden_tools/tools/hubspot_tool/tests/: test_hubspot_tool.py
tools/src/aden_tools/tools/web_scrape_tool/: web_scrape_tool.py
tools/tests/: test_credentials.py  test_health_checks.py
tools/tests/tools/: test_file_system_toolkits.py
